src/objects/BMCServiceDesk__BMC_MFCouplingFacility__c.object
<CustomObject>
    <description>BMC_MFCouplingFacility. CMDB Class that stores information about a Mainframe Coupling Facility.This class has no corresponding DMTF CIM class</description>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Name__c</fullName>
        <label>CFRM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Site_Name__c</fullName>
        <label>CFRM Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Node_Descriptor__c</fullName>
        <label>Node Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Storage__c</fullName>
        <label>Storage</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>MF Coupling Facility</label>
    <nameField>
        <label>MF Coupling Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MF Coupling Facility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>